test/corpus/lines.txt
================================================================================
Bare label with header comment
================================================================================

XINDEX ;ISC/REL,GFT,GRK,RWF - INDEX

--------------------------------------------------------------------------------

(source_file
  (line
    (label)
    (comment)))

================================================================================
Label with formals
================================================================================

EX(A,B,C) ;formals

--------------------------------------------------------------------------------

(source_file
  (line
    (label)
    (formals
      (identifier)
      (identifier)
      (identifier))
    (comment)))

================================================================================
Label with empty formals
================================================================================

ZERO()

--------------------------------------------------------------------------------

(source_file
  (line
    (label)
    (formals)))

================================================================================
Leading-space comment line
================================================================================

 ; just a comment

--------------------------------------------------------------------------------

(source_file
  (line
    (comment)))

================================================================================
Doubled-semicolon documentation line
================================================================================

 ;;7.3;TOOLKIT;**20**

--------------------------------------------------------------------------------

(source_file
  (line
    (comment)))

================================================================================
Blank line followed by command line
================================================================================

 BREAK

--------------------------------------------------------------------------------

(source_file
  (line
    (command_sequence
      (command
        (command_keyword)))))

================================================================================
Label-only line (no body, no comment)
================================================================================

LOOP

--------------------------------------------------------------------------------

(source_file
  (line
    (label)))
